--- a/index.html
+++ b/index.html
@@ -11,32 +11,50 @@
 </head>
 <body>
 
-    <header>
-        <a href="#" class="logo">Miracle Baby Homecare</a>
-        <div class="hamburger-menu"></div>
+    <div class="latar">
+        <header>
+            <a href="#" class="logo">Miracle Baby Homecare</a>
+            <div class="hamburger-menu"></div>
+    
+            <nav>
+                <ul>
+                    <li><a href="#" class="active">Home</a></li>
+                    <li><a href="#">Tentang Kami</a></li>
+                    <li><a href="#">Pelayanan</a></li>
+                    <li><a href="#">Tim</a></li>
+                    <li><a href="#">Kontak</a></li>
+                    <li><a href="#">Reservasi</a></li>
+                </ul>
+            </nav>
+            <div class="clearfix"></div>
+        </header>
 
-        <nav>
-            <ul>
-                <li><a href="#" class="active">Home</a></li>
-                <li><a href="#">Tentang Kami</a></li>
-                <li><a href="#">Pelayanan</a></li>
-                <li><a href="#">Tim</a></li>
-                <li><a href="#">Kontak</a></li>
-                <li><a href="#">Reservasi</a></li>
-            </ul>
-        </nav>
-        <div class="clearfix"></div>
-    </header>
+        <section>
+            <div class="content">
+                <h2>Selamat Datang di <br> Miracle Baby Homecare</h2>
+                <p>
+                    Lorem ipsum dolor sit amet consectetur, adipisicing elit. Provident mollitia qui tenetur, expedita, illum soluta iusto asperiores atque harum commodi dignissimos voluptate obcaecati autem perferendis.
+                </p>
+            </div>
+            <div class="image">
+                <img src="img/babyyy.jpg" width="100%" alt="Gambar">
+            </div>
+        </section>
+    </div>
 
-    <section>
-        <div class="content">
-            <h2>Selamat Datang di <br> Miracle Baby Homecare</h2>
-            <p>Lorem ipsum dolor sit amet consectetur, adipisicing elit. Provident mollitia qui tenetur, expedita, illum soluta iusto asperiores atque harum commodi dignissimos voluptate obcaecati autem perferendis.</p>
+    <div class="tentang">
+        <h2>Tentang Kami</h2>
+        <p>
+            Lorem ipsum dolor sit amet consectetur adipisicing elit. Rem similique ad porro ex corporis vero quasi animi est, expedita a. <br>
+        </p>
+        <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Minima harum quisquam nihil totam dolorum omnis nostrum repellendus ad eveniet commodi est deleniti reprehenderit recusandae quos mollitia aliquam laborum voluptas quod corporis voluptatibus, ipsa adipisci libero suscipit. Ipsam soluta doloribus neque.</p>
+
+        <div class="social">
+            <a href="#"><i class="fa-brands fa-facebook"></i></a>
+            <a href="#"><i class="fa-brands fa-instagram"></i></a>
+            <a href="#"><i class="fa-brands fa-whatsapp"></i></a>
         </div>
-        <div class="image">
-            <img src="img/babyyy.jpg" width="100%" alt="Gambar">
-        </div>
-    </section>
+    </div>
     
     <script
         src="https://code.jquery.com/jquery-3.6.3.js"
